kustomize/overlays/prod/httproute-patch.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mern-route
spec:
  hostnames:
    - prod.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prod-frontend-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /books
      backendRefs:
        - name: prod-backend-service
          port: 8000
